add click event for poping picture

--- a/src/flowerShop/index.html
+++ b/src/flowerShop/index.html
@@ -1,18 +1,28 @@
 <html>
+
 <head>
 <title>花店主页</title>
 </head>
+
 <body>
-<table border=0 align=center cellspacing=0 cellpadding=50>
+
+<table border=0 align=center cellspacing=0 cellpadding=20 id="flowerTable">
+
 <tr>
-<th>花名</th><th>花语</th><th>图片</th><th>价格</th>
+<th>花名</th><th>花语</th><th>价格</th>
 </tr>
+
 <tr bgcolor=red>
-<td>玫瑰</td><td>爱情</td><td><img src="images/rose.png" alt="rose" /></td><td>12</td>
+<td onclick='insertPicToRow("images/rose.png","rose",2)'>玫瑰</td><td>爱情</td><td>12</td>
 </tr>
+
 <tr bgcolor=yellow>
-<td>康乃馨</td><td>母爱</td><td><img src="images/carnation.png" alt="carnation" /></td><td>12</td>
+<td onclick='insertPicToRow("images/carnation.png","carnation",4)'>康乃馨</td><td>母爱</td><td>12</td>
 </tr>
+
 </table>
+
+<script src="myjs.js"></script>
+
 </body>
 </html>
