--- a/src/flowerShop/index.html
+++ b/src/flowerShop/index.html
@@ -7,17 +7,17 @@
 
 <body onload="initBottomStatus()">
 
-<table border=0 align=center cellspacing=0 cellpadding=20 id="flowerTable">
+<table border=0 align=center cellspacing=0 cellpadding=20 width="80%" id="flowerTable">
 
 <tr>
 <th>花名</th><th>花语</th><th>价格</th>
 </tr>
 
-<tr bgcolor=red>
+<tr bgcolor=red align=center>
 <td onclick='clickBottom(1,"images/rose.png","rose")'>玫瑰</td><td>爱情</td><td>12</td>
 </tr>
 
-<tr bgcolor=yellow>
+<tr bgcolor=yellow align=center>
 <td onclick='clickBottom(2,"images/carnation.png","carnation")'>康乃馨</td><td>母爱</td><td>12</td>
 </tr>
 
