--- a/src/flowerShop/index.html
+++ b/src/flowerShop/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>»¨µêÖ÷Ò³</title>
 <script src="myjs.js"></script>
+<script src="StackBlur.js" language="javascript"></script>
 </head>
 
 <body onload="initBottomStatus()">
