--- a/src/flowerShop/index.html
+++ b/src/flowerShop/index.html
@@ -10,10 +10,6 @@
 
 <body>
 
-<canvas id="canvas1"></canvas>
-
-<canvas id="canvas2"></canvas>
-
 <table border=0 align=center cellspacing=0 cellpadding=20 width="80%" id="flowerTable">
 
 <tr>
@@ -25,7 +21,10 @@
 </tr>
 
 <tr align="center">
-<td colspan=3><img src="images/rose.png" id="picture1" alt="rose" width="100%" /></td>
+<td colspan=3>
+<img src="images/rose.png" id="picture1" alt="rose" width="100%" />
+<canvas id="canvas1"></canvas>
+</td>
 </tr>
 
 <tr bgcolor=yellow align=center>
@@ -33,7 +32,10 @@
 </tr>
 
 <tr align="center">
-<td colspan=3><img src="images/carnation.png" id="picture2" alt="carnation" width="100%" /></td>
+<td colspan=3>
+<img src="images/carnation.png" id="picture2" alt="carnation" width="100%" />
+<canvas id="canvas2"></canvas>
+</td>
 </tr>
 
 </table>
